--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
   font-weight: 500;
 }
 
-.main {
+body {
   background-color: hsl(30, 38%, 92%);
   height: 100vh;
   display: flex;
@@ -17,68 +17,68 @@
   justify-content: center;
 }
 
-.main .container {
-  width: 45rem;
+.container {
+  width: 40rem;
   background-color: hsl(0, 0%, 100%);
   display: grid;
   grid-template-columns: 1fr 1fr;
   border-radius: 1.1rem;
 }
 
-.main .container .image-container .product-image {
+.container .image-container .product-image {
   width: 100%;
   height: 100%;
   border-radius: 1.1rem 0 0 1.1rem;
 }
 
-.main .container .product-details {
+.container .product-details {
   padding: 2rem;
 }
 
-.main .container .product-details .label {
+.container .product-details .label {
   text-transform: uppercase;
   letter-spacing: 0.5rem;
-  margin-top: 1rem;
-  margin-bottom: 1.6rem;
+  margin-top: 0.8rem;
+  margin-bottom: 1.4rem;
   color: hsl(228, 12%, 48%);
 }
 
-.main .container .product-details .title {
+.container .product-details .title {
   font-family: "Fraunces", serif;
   color: hsl(212, 21%, 14%);
-  font-size: 2.5rem;
+  font-size: 2.3rem;
   line-height: 1.1;
   font-weight: 700;
+  margin-bottom: 1.4rem;
+}
+
+.container .product-details .description {
+  color: hsl(228, 12%, 48%);
+  font-size: 1.03rem;
+  line-height: 1.2;
+  word-spacing: 0.1rem;
   margin-bottom: 1.6rem;
 }
 
-.main .container .product-details .description {
-  color: hsl(228, 12%, 48%);
-  font-size: 1.05rem;
-  line-height: 1.2;
-  word-spacing: 0.1rem;
-  margin-bottom: 1.8rem;
-}
-
-.main .container .product-details .prices {
+.container .product-details .prices {
   display: flex;
   gap: 1rem;
-  margin-bottom: 1.9rem;
+  margin-bottom: 1.7rem;
 }
 
-.main .container .product-details .prices .new-price {
+.container .product-details .prices .new-price {
   font-family: "Fraunces", serif;
   color: hsl(158, 36%, 37%);
-  font-size: 2.5rem;
+  font-size: 2.3rem;
 }
 
-.main .container .product-details .prices .old-price {
+.container .product-details .prices .old-price {
   align-self: center;
   text-decoration: line-through;
   color: hsl(228, 12%, 48%);
 }
 
-.main .container .product-details .btn {
+.container .product-details .btn {
   width: 100%;
   display: flex;
   gap: 0.7rem;
@@ -90,16 +90,16 @@
   border: none;
 }
 
-.main .container .product-details .btn:hover {
+.container .product-details .btn:hover {
   cursor: pointer;
   background-color: hsl(157, 37%, 18%);
 }
 
-.main .container .product-details .btn img {
+.container .product-details .btn img {
   width: 1.2rem;
 }
 
-.main .container .product-details .btn .btn-text {
+.container .product-details .btn .btn-text {
   color: hsl(0, 0%, 100%);
   font-size: 1rem;
   font-weight: 700;
